@@ -1,4 +1,4 @@
-/* $Id: tif_jpeg.c,v 1.75 2007-12-10 19:58:41 fwarmerdam Exp $ */
+/* $Id: tif_jpeg.c,v 1.76 2008-02-01 21:50:24 fwarmerdam Exp $ */
 
 /*
  * Copyright (c) 1994-1997 Sam Leffler
@@ -681,6 +681,16 @@ JPEGFixupTagsSubsampling(TIFF* tif)
 	 */
 	static const char module[] = "JPEGFixupTagsSubsampling";
 	struct JPEGFixupTagsSubsamplingData m;
+
+        if( tif->tif_dir.td_stripbytecount == NULL
+            || tif->tif_dir.td_stripbytecount[0] == 0 )
+        {
+            /* Do not even try to check if the first strip/tile does not
+               yet exist, as occurs when GDAL has created a new NULL file
+               for instance. */
+            return;
+        }
+
 	m.tif=tif;
 	m.buffersize=2048;
 	m.buffer=_TIFFmalloc(m.buffersize);
